# conference

./: .dockerignore  .gitignore  .travis.yml  App.toml.sample  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deploy.init.sh  diesel.toml  docker-compose.yaml  rustfmt.toml  skaffold.yaml  sqlx-data.json  task_description.md  werf.yaml
.github/: CODEOWNERS
.github/workflows/: build-dev-artifacts.yml  build-release-artifacts.yml  check.yml  ci.yml  converge.yml  deploy-via-flux.yml  deploy.yml  docs.yml  mdbook.yml  release.yml
.helm/: secret-values.yaml  values.yaml
.helm/templates/: 09-cm-app.yaml  10-app.yaml  30-hpa.yaml  30-pdb.yaml  30-vpa.yaml  _envs.bak  _init.tpl  _volumes.tpl  migrations.yaml
chart/: Chart.yaml  sample.yaml  values.yaml  values.yaml.example
chart/templates/: _helpers.tpl  app-cm.yaml  app.yaml  config.yaml  configmap.yaml  env.yaml  headless-svc.yaml  ingress.yaml  networking.yaml  pdb.yaml  servicemonitor.yaml  services.yaml  sts.yaml
data/keys/: svc.private_key.p8.der.sample  svc.public_key.p8.der.sample.der
deploy/: ca.crt  docs.sh  run.sh
docker/: Dockerfile  develop.dockerfile  develop.run.sh  init_develop_configs.sh  migration.dockerfile
docker/configs/: janus.jcfg  janus.plugin.conference.toml  janus.transport.mqtt.jcfg
docs/data/: conference.schema.xml
docs/src/: SUMMARY.md  api.agent.list.md  api.event.subscribe.md  api.http.md  api.md  api.message.broadcast.md  api.message.callback.md  api.message.create.md  api.message.unicast.md  api.room.create.md  api.room.delete.md  api.room.enter.md  api.room.leave.md  api.room.md  api.room.read.md  api.room.update.md  api.rtc.connect.md  api.rtc.create.md  api.rtc.list.md  api.rtc.md  api.rtc.read.md  api.rtc_signal.create.md  api.rtc_stream.list.md  api.rtc_stream.md  api.signal.create.md  authn.md  authz.md
k8s/: conference-config.yaml  conference-environment.yaml  conference-headless.yaml  conference.yaml
legacy_migrations/2018-12-16-184345_enable_pgcrypto/: down.sql  up.sql
legacy_migrations/2018-12-16-184534_create_account_id/: up.sql
legacy_migrations/2018-12-16-190459_create_room/: up.sql
legacy_migrations/2018-12-16-190543_create_rtc/: down.sql
legacy_migrations/2019-03-08-030645_create_janus_rtc_stream/: down.sql  up.sql
legacy_migrations/2019-07-11-123125_switch_to_relative_timestamps/: up.sql
legacy_migrations/2019-09-02-120035_add_status_to_recording/: down.sql  up.sql
legacy_migrations/2019-10-11-040251_add_status_to_agent/: down.sql  up.sql
legacy_migrations/2020-02-05-034852_rename_recording_time_to_segments/: up.sql
legacy_migrations/2020-07-06-230615_add_limits/: down.sql
legacy_migrations/2020-08-13-114929_rename_janus_backend_subscribers_limit_to_capacity/: down.sql
legacy_migrations/2020-08-18-174714_add_connected_to_agent_status_enum/: up.sql
legacy_migrations/2020-08-27-001820_remove_janus_rtc_stream_backend_fk/: down.sql
legacy_migrations/2020-09-11-163557_move_backend_id_from_stream_to_recording/: down.sql
legacy_migrations/2020-09-24-104539_add_tags_to_room/: down.sql  up.sql
legacy_migrations/2020-11-25-100717_move_backend_id_to_room_from_recording/: down.sql
legacy_migrations/2020-12-07-131734_unique_rtc_per_room/: down.sql
legacy_migrations/2020-12-29-232109_create_agent_connection/: up.sql
legacy_migrations/2021-02-01-193110_add_api_version_to_janus_backend/: up.sql
legacy_migrations/2021-03-01-092819_add_rtc_sharing_policy_to_room/: down.sql
legacy_migrations/2021-04-15-120829_add_class_id_to_room/: down.sql  up.sql
legacy_migrations/2021-04-26-175824_rename_class_id_to_classroom_id/: up.sql
legacy_migrations/2021-06-03-153006_add_group_to_janus_backend/: down.sql
legacy_migrations/2021-06-22-121707_add_janus_url/: up.sql
legacy_migrations/2021-08-13-113234_add_host_to_room/: up.sql
legacy_migrations/2021-08-13-124118_add_orphan_rooms_table/: down.sql  up.sql
legacy_migrations/2021-08-17-111610_add_timeouted_to_room/: up.sql
legacy_migrations/2021-09-13-223941_add_room_time_index/: down.sql  up.sql
legacy_migrations/2021-09-16-140730_writer_config_add_updated_at/: up.sql
legacy_migrations/2022-04-22-133748_add_infinite_to_rooms/: down.sql
legacy_migrations/2022-07-18-151732_set_classroom_id_not_null/: down.sql  up.sql
legacy_migrations/2022-11-11-111535_create_group_agent/: down.sql
legacy_migrations/2022-12-29-154244_add_outbox/: down.sql
migrations/: 20230616111239_initial.up.sql  20230623193421_add_operation_to_outbox.down.sql  20230623193421_add_operation_to_outbox.up.sql  20230712094926_ban_account.down.sql  20230712094926_ban_account.up.sql  20230725111239_create_sequence_nats_event_seq_id.down.sql  20230725111239_create_sequence_nats_event_seq_id.up.sql  20230725111239_create_sequence_video_group_entity_seq_id.down.sql  20230725111239_create_sequence_video_group_entity_seq_id.up.sql  20230725111239_create_table_nats_event_ids.down.sql  20230725111239_initial.up.sql
migrations/2018-12-16-184345_enable_pgcrypto/: down.sql
migrations/2018-12-16-184534_create_account_id/: down.sql
migrations/2018-12-16-184636_create_agent_id/: down.sql  up.sql
migrations/2018-12-16-190459_create_room/: down.sql  up.sql
migrations/2018-12-16-190509_create_rtc_state/: down.sql  up.sql
migrations/2018-12-16-190543_create_rtc/: up.sql
migrations/2018-12-16-190801_create_janus_session/: down.sql  up.sql
migrations/2018-12-16-190801_create_janus_session_shadow/: up.sql
migrations/2018-12-22-163556_create_janus_handle/: up.sql
migrations/2018-12-22-163556_create_janus_handle_shadow/: down.sql  up.sql
migrations/2019-02-11-155047_create_recording/: down.sql  up.sql
migrations/2019-03-06-173834_create_janus_backend/: up.sql
migrations/2019-03-06-173834_janus_backend/: down.sql  up.sql
migrations/2019-07-11-123125_switch_to_relative_timestamps/: down.sql
migrations/2019-08-05-144529_add_backend_to_room/: down.sql  up.sql
src/: authn.rs  authz.rs  cache.rs  config.rs  main.rs  schema.rs  serde.rs  trace_id.rs  tracing.rs  util.rs  wait.rs
src/app/: cluster_ip.rs  config.rs  error.rs  (+16 more)
(+275 files in other folders)
