[package]
authors = ["Andrei Nesterov <ae.nesterov@gmail.com>"]
edition = "2018"
name = "conference"
version = "0.6.57"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.5", features = ["headers"] }
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
config = "0.11"
derive_more = "0.99"
diesel = { version = "1", features = ["postgres", "uuid", "chrono", "serde_json", "r2d2"] }
diesel-derive-enum = { version = "1", features = ["postgres"] }
diesel-derive-newtype = "0.1"
enum-iterator = "0.7"
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
headers = "0.3"
http = "0.2"
humantime-serde = "1"
hyper = { version = "0.14", features = ["server"] }
k8s-openapi = { version = "0.15.0", features = ["v1_19"] }
kube = { version = "0.73.0" }
once_cell = "1"
openssl = "*"
prometheus = "0.12"
prometheus-static-metric = "0.5"
rand = "0.8"
reqwest = "0.11"
sentry = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3.6"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
svc-agent = { version = "0.19", features = ["diesel"] }
svc-authn = { version = "0.7", features = ["jose", "diesel"] }
svc-authz = "0.11"
svc-error = { version = "0.2", features = [
  "diesel",
  "r2d2",
  "svc-agent",
  "svc-authn",
  "svc-authz",
  "sentry-extension",
] }
svc-utils = { version = "0.5", features = ["cors-middleware", "authn-extractor"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.1", features = ["trace"] }
tracing = "0.1"
tracing-appender = "0.1"
tracing-attributes = "0.1"
tracing-error = { version = "0.1" }
tracing-futures = "0.2"
tracing-subscriber = "0.2"
uuid = { version = "0.6", features = ["v4", "serde"] }
webrtc-sdp = "0.3"
lazy_static = "1.4.0"
either = "1.7"

[features]
local_ip = ["local-ip-address"]

[dependencies.local-ip-address]
optional = true
version = "0.4"

[dev-dependencies]
diesel_migrations = "1"
httpmock = "0.6"
testcontainers = { git = "https://github.com/testcontainers/testcontainers-rs" }
