[package]
authors = ["Andrei Nesterov <ae.nesterov@gmail.com>"]
edition = "2018"
name = "conference"
version = "0.6.62"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.6", features = ["headers"] }
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
config = "0.11"
derive_more = "0.99"
either = "1.8"
enum-iterator = "0.7"
futures = "0.3"
http = "0.2"
humantime-serde = "1.1"
hyper = { version = "0.14", features = ["server"] }
k8s-openapi = { version = "0.18", features = ["v1_23"] }
kube = { version = "0.83" }
parking_lot = "0.12"
prometheus = "0.13"
prometheus-static-metric = "0.5"
reqwest = "0.11"
sentry = { version = "0.31", features = ["reqwest"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
sqlx = { version = "0.6", features = ["offline", "postgres", "chrono", "uuid", "json", "runtime-tokio-native-tls"] }
svc-agent = { version = "0.21", features = ["sqlx"] }
svc-authn = { version = "0.8", features = ["jose"] }
svc-authz = "0.12"
svc-error = { version = "0.6", features = [
  "r2d2",
  "svc-agent",
  "svc-authn",
  "svc-authz",
  "sentry-extension",
] }
svc-events = { version = "0.10" }
svc-nats-client = { version = "0.7" }
svc-utils = { version = "0.8", features = ["cors-middleware", "authn-extractor", "metrics-middleware"] }
thiserror = "1.0"
tokio = { version = "1.28", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
tracing = "0.1"
tracing-appender = "0.1"
tracing-attributes = "0.1"
tracing-error = "0.1"
tracing-subscriber = "0.2"
uuid = { version = "1.3", features = ["v4", "serde"] }
webrtc-sdp = "0.3"

[features]
local_ip = ["local-ip-address"]

[dependencies.dotenv]
version = "0.15"
optional = true

[dependencies.local-ip-address]
version = "0.5"
optional = true

[dev-dependencies]
httpmock = "0.6"
rand = "0.8"
testcontainers = "0.14"
